# Schrodinger_1D

./: CMakeLists.txt  LICENSE  Readme.md
include/: Color.h  FDM_Solver.h  FFT.h  Graph.h  Grid.h  ImGuiControls.h  Potentials.h  Render.h  Wave_Packet.h  shader.h  spline.h
shader/: shader.vert
src/: FDM_Solver.cpp  FFT.cpp  Graph.cpp  Grid.cpp  Potentials.cpp  Render.cpp  Spline.cpp  Wave_Packet.cpp  main.cpp  shader.cpp
test/: CMakeLists.txt  Schrodinger_Solver_Test.cpp  Spline_Test.cpp
